rewrited Model.getDocByParam and Model.deleteDocByParam; added Model.updateDocByParams, examples; updated README

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "type": "module",
   "author": "DenKisil",
+  "repository": "https://github.com/denkisil/ccdb",
   "license": "MIT",
   "imports": {
     "#errors": "./lib/errors/mod.js"
